--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -16,9 +16,15 @@
         <td><%= lesson.description %></td>
         <td>
           <div class="btn-group" role="group">
-            <%= link_to 'Edit', edit_lesson_path(lesson), :class => 'btn btn-default btn-sm', :role => 'button' %>
-            <%= link_to 'Show', lesson, :class => 'btn btn-default btn-sm', :role => 'button' %>
-            <%= link_to 'Destroy', lesson, :class => 'btn btn-danger btn-sm', :role => 'button', method: :delete, data: { confirm: 'Are you sure?' } %>
+            <% if can? :edit, Lesson %>
+                <%= link_to 'Edit', edit_lesson_path(lesson), :class => 'btn btn-default btn-sm', :role => 'button' %>
+            <% end %>
+            <% if can? :show, Lesson %>
+                <%= link_to 'Show', lesson, :class => 'btn btn-default btn-sm', :role => 'button' %>
+            <% end %>
+            <% if can? :destroy, Lesson %>
+                <%= link_to 'Destroy', lesson, :class => 'btn btn-danger btn-sm', :role => 'button', method: :delete, data: { confirm: 'Are you sure?' } %>
+            <% end %>
           </div>
         </td>
       </tr>
