--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,5 +3,7 @@
   <%= @book.description %>
 </p>
 
-<%= link_to 'Edit', edit_book_path(@book) %> |
+<% if can? :edit, Book %>
+    <%= link_to 'Edit', edit_book_path(@book) %> |
+<% end %>
 <%= link_to 'Back', books_path %>
