Corrigindo audio player que nao tocava aac no ios.

--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -22,7 +22,7 @@
   <div class="form-group">
     <%= f.label :audio %><br>
     <audio controls controlsList="nodownload">
-      <source src="<%= @section.audio %>" type="audio/mp4">
+      <source src="<%= @section.audio %>" type="audio/mpeg">
       <source src="<%= @section.second_audio %>" type="audio/ogg">
       <p>Your browser does not support HTML5 audio, but you can still
         <a href="<%= @section.audio %>">download the file</a>.</p>
