--- a/app/views/dashboards/answer_questions.html.erb
+++ b/app/views/dashboards/answer_questions.html.erb
@@ -10,7 +10,7 @@
 
       <div class="col-md-4">
         <audio id="player" controls controlsList="nodownload">
-          <source src="<%= @section.audio %>" type="audio/mp4">
+          <source src="<%= @section.audio %>" type="audio/mpeg">
           <source src="<%= @section.second_audio %>" type="audio/ogg">
           <p>Your browser does not support HTML5 audio, but you can still
             <a href="<%= @section.audio %>">download the file</a>.</p>
